# emegrency_alert_system

./: .env.example  .gitignore  README.md  pyproject.toml  rxconfig.py
eas/: eas.py
